--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
 				<nav>
 					<ul>
 						<li><a href="#intro">Introdução</a></li>
-						<li><a href="#one">O que eu faço</a></li>
-						<li><a href="#two">Quem eu sou</a></li>
-						<li><a href="#work">Meu trabalhos</a></li>
+						<li><a href="#o-que-faco">O que eu faço</a></li>
+						<li><a href="#quem-sou">Quem eu sou</a></li>
+						<li><a href="#meu-trabalho">Meu trabalhos</a></li>
+						<li><a href="#contato">Contatos</a></li>
 					</ul>
 				</nav>
 			</header>
